--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "jquery": "^3.6.0",
+    "jsdom": "^20.0.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
